--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "repository": "git@github.com:hjfitz/redis-utils-json.git",
   "author": "Harry <hfitz83@gmail.com>",
   "license": "GPL-3.0",
-  "private": true,
+  "private": false,
   "devDependencies": {
     "@types/node": "^9.3.0",
     "@types/redis": "^2.8.4",
@@ -20,13 +20,16 @@
     "eslint-plugin-react": "^7.5.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
+    "gulp-jsdoc3": "^1.0.1",
     "gulp-sourcemaps": "^2.6.3",
     "gulp-typescript": "^4.0.0-alpha.1",
-    "merge2": "^1.2.1",
     "typescript": "^2.6.2"
   },
   "scripts": {
-    "build": "tsc --pretty"
+    "build": "gulp build",
+    "docs": "gulp docs",
+    "dev": "gulp",
+    "watch": "gulp watch"
   },
   "dependencies": {
     "redis": "^2.8.0"
