--- a/package.json
+++ b/package.json
@@ -13,18 +13,14 @@
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "chai": "^4.1.2",
-    "eslint": "^4.16.0",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.5.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
     "gulp-jsdoc3": "^1.0.1",
     "gulp-sourcemaps": "^2.6.3",
     "gulp-typescript": "^4.0.0-alpha.1",
     "mocha": "^5.0.0",
+    "tslint": "^5.9.1",
+    "tslint-config-airbnb": "^5.4.2",
     "typescript": "^2.6.2"
   },
   "scripts": {
